ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /foo
          backend:
            service:
              name: foo-app
              port: 8080
        - path: /bar
          backend:
            service:
              name: bar-app
              port: 8080
